src/pyflakes/snapshots/ruff__pyflakes__tests__F401_F401_1.py.snap
---
source: src/pyflakes/mod.rs
expression: checks
---
- kind:
    UnusedImport:
      - pyarrow.csv
      - false
  location:
    row: 3
    column: 7
  end_location:
    row: 3
    column: 18
  fix:
    content: ""
    location:
      row: 3
      column: 0
    end_location:
      row: 4
      column: 0

