src/pyflakes/snapshots/ruff__pyflakes__tests__F401_F401_5.py.snap
---
source: src/pyflakes/mod.rs
expression: checks
---
- kind:
    UnusedImport:
      - a.b.c
      - false
  location:
    row: 2
    column: 16
  end_location:
    row: 2
    column: 17
  fix:
    patch:
      content: ""
      location:
        row: 2
        column: 0
      end_location:
        row: 3
        column: 0
- kind:
    UnusedImport:
      - d.e.f
      - false
  location:
    row: 3
    column: 16
  end_location:
    row: 3
    column: 22
  fix:
    patch:
      content: ""
      location:
        row: 3
        column: 0
      end_location:
        row: 4
        column: 0
- kind:
    UnusedImport:
      - h.i
      - false
  location:
    row: 4
    column: 7
  end_location:
    row: 4
    column: 10
  fix:
    patch:
      content: ""
      location:
        row: 4
        column: 0
      end_location:
        row: 5
        column: 0
- kind:
    UnusedImport:
      - j.k
      - false
  location:
    row: 5
    column: 7
  end_location:
    row: 5
    column: 15
  fix:
    patch:
      content: ""
      location:
        row: 5
        column: 0
      end_location:
        row: 6
        column: 0

