src/pyflakes/snapshots/ruff__pyflakes__tests__F401_F401_6.py.snap
---
source: src/pyflakes/mod.rs
expression: checks
---
- kind:
    UnusedImport:
      - background.BackgroundTasks
      - false
  location:
    row: 7
    column: 24
  end_location:
    row: 7
    column: 39
  fix:
    patch:
      content: ""
      location:
        row: 7
        column: 0
      end_location:
        row: 8
        column: 0
- kind:
    UnusedImport:
      - datastructures.UploadFile
      - false
  location:
    row: 10
    column: 28
  end_location:
    row: 10
    column: 52
  fix:
    patch:
      content: ""
      location:
        row: 10
        column: 0
      end_location:
        row: 11
        column: 0
- kind:
    UnusedImport:
      - background
      - false
  location:
    row: 17
    column: 7
  end_location:
    row: 17
    column: 17
  fix:
    patch:
      content: ""
      location:
        row: 17
        column: 0
      end_location:
        row: 18
        column: 0
- kind:
    UnusedImport:
      - datastructures
      - false
  location:
    row: 20
    column: 7
  end_location:
    row: 20
    column: 35
  fix:
    patch:
      content: ""
      location:
        row: 20
        column: 0
      end_location:
        row: 21
        column: 0

