src/pyflakes/snapshots/ruff__pyflakes__tests__F401_F401_7.py.snap
---
source: src/pyflakes/mod.rs
expression: checks
---
- kind:
    UnusedImport:
      - typing.Union
      - false
  location:
    row: 30
    column: 4
  end_location:
    row: 30
    column: 9
  fix:
    location:
      row: 28
      column: 0
    end_location:
      row: 31
      column: 1
    content: "from typing import (\n    Mapping,  # noqa: F401\n    )"
    message: ~
  parent:
    row: 28
    column: 0
- kind:
    UnusedImport:
      - typing.Awaitable
      - false
  location:
    row: 66
    column: 19
  end_location:
    row: 66
    column: 28
  fix:
    location:
      row: 66
      column: 0
    end_location:
      row: 67
      column: 0
    content: ""
    message: ~
  parent: ~
- kind:
    UnusedImport:
      - typing.AwaitableGenerator
      - false
  location:
    row: 66
    column: 30
  end_location:
    row: 66
    column: 48
  fix:
    location:
      row: 66
      column: 0
    end_location:
      row: 67
      column: 0
    content: ""
    message: ~
  parent: ~

