src/pyflakes/snapshots/ruff__pyflakes__tests__F407_F407.py.snap
---
source: src/pyflakes/mod.rs
expression: checks
---
- kind:
    FutureFeatureNotDefined: non_existent_feature
  location:
    row: 2
    column: 23
  end_location:
    row: 2
    column: 43
  fix: ~
  parent: ~

