src/pyflakes/snapshots/ruff__pyflakes__tests__F501_F50x.py.snap
---
source: src/pyflakes/mod.rs
expression: checks
---
- kind:
    PercentFormatInvalidFormat: incomplete format
  location:
    row: 1
    column: 0
  end_location:
    row: 1
    column: 25
  fix: ~
  parent: ~

